--- a/templates/render.tmpl
+++ b/templates/render.tmpl
@@ -1,36 +1,51 @@
+<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+
+<body class="p-10">
 {{ $current := .current }}
 {{ $parent := .parent }}
 {{ with .node }}
 <div>
-    <ul>
-    <li><a href="{{ $parent }}"><code>..</code></a></li>
+    <ul class="list-disc list-inside">
+    <li><a href="{{ $parent }}" class="text-blue-500 underline"><code>..</code></a></li>
     {{ range .Links }}
-        <li><a href="{{ $current }}{{ .Name }}"><code>{{ .Cid }} {{ .Name }}{{ if eq .Cid.Prefix.Codec 0x70 }}/{{ end }}</code></a></li>
+        <li><code>{{ .Cid }}</code> <a class="text-blue-500 underline" href="{{ $current }}{{ .Name }}"><code>{{ .Name }}{{ if eq .Cid.Prefix.Codec 0x70 }}/{{ end }}</code></a></li>
     {{ end }}
     </ul>
 </div>
 
-<form action="?" method="post" enctype="multipart/form-data">
-	<div>
-		Add Files:
+<div class="bg-white shadow-lg rounded-lg max-w-md py-4 px-8 my-2 border">
+	<form action="?" method="post" enctype="multipart/form-data">
+		<h2 class="text-lg">Add Files</h2>
 		<input type="file" id="file" name="file" multiple="multiple">
-	</div>
-	<!-- <div>
-		Add Dir:
-		<input type="file" id="file" name="directory" webkitdirectory>
-	</div> -->
-	<input type="submit">
-</form>
+		<!-- <div>
+			Add Dir:
+			<input type="file" id="file" name="directory" webkitdirectory>
+		</div> -->
+		<input type="submit" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">
+	</form>
+</div>
 
-<form action="?" method="post" >
-	<div>
-		Create empty directory
-		<input type="text" id="dir" name="dir">
-	</div>
-	<input type="submit">
-</form>
+<div class="bg-white shadow-lg rounded-lg max-w-md py-4 px-8 my-2 border">
+	<form action="?" method="post" >
+		<h2 class="text-lg">Create empty directory</h2>
+		name
+		<input type="text" id="dir" name="dir" class="w-full border-2 rounded">
+		<input type="submit" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">
+	</form>
+</div>
+
+<div class="bg-white shadow-lg rounded-lg max-w-md py-4 px-8 my-2 border">
+	<form action="?" method="post" >
+		<h2 class="text-lg">Link subtree</h2>
+		name <input type="text" id="dir" name="link_name" class="w-full border-2 rounded">
+		hash <input type="text" id="dir" name="link_hash" class="w-full border-2 rounded">
+		<input type="submit" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">
+	</form>
+</div>
 {{ end }}
 
 <pre>
 {{ .blob }}
 </pre>
+
+</body>
