--- a/templates/render.tmpl
+++ b/templates/render.tmpl
@@ -7,36 +7,72 @@
 
 <div class="divide-y divide-blue-500 border border-blue-500 rounded-lg">
 	<div class="p-2 flex">
-		<div class="px-2 bg-yellow-100 border border-yellow-200 rounded-lg w-min">{{ .base }}</div>
+		<div class="px-2 bg-yellow-100 border border-yellow-200 rounded-lg w-min">
+			{{ .base }}
+		</div>
 		{{ range .segments }}
 		<div><div class="inline px-1">/</div><a class="underline" href="{{ .FullPath }}">{{ .Name }}</a></div>
 		{{ end }}
 	</div>
-	{{ if .blob_str }}
-	<button
-	  class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded"
-	  id="save_button"
-	  disabled="true"
-	  onclick="save()">
-	    Save & Branch
-	</button>
-    {{ end }}
-	{{ if .node }}
-	<input type="file" id="file_input" multiple style="display: none;" onchange="fileInputChange()">
-	<button
-	  class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded"
-	  id="upload_files_button"
-	  onclick="upload_files()">
-	    Upload files & Branch
-	</button>
-	{{ end }}
+	<div class="flex">
+		{{ if .blob_str }}
+		<button
+		class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded"
+		id="save_button"
+		disabled="true"
+		onclick="save()">
+			Save & Branch
+		</button>
+		{{ end }}
+		{{ if .node }}
+		<input type="file" id="file_input" multiple style="display: none;" onchange="fileInputChange()">
+		<button
+		class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded flex"
+		id="upload_files_button"
+		onclick="upload_files()">
+		<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12" />
+		</svg>
+		</button>
+		<button
+		class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded flex"
+		id="upload_files_button"
+		onclick="upload_files()">
+		<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m-9 1V7a2 2 0 012-2h6l2 2h6a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
+		</svg>
+		</button>
+		<button
+		class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded flex"
+		id="upload_files_button"
+		onclick="upload_files()">
+			<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+			<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+			</svg>
+		</button>
+		{{ end }}
+	</div>
 	<a href="{{ $parent }}" class="block p-2 hover:bg-blue-200 font-mono flex">
-		<div class="px-2">/</div>
+		<div class="px-2">
+			<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z" />
+			</svg>
+		</div>
 		<div class="px-2 flex-1">..</div>
 	</a>
     {{ range .node.Links }}
 	<a href="{{ $current }}{{ .Name }}" class="block p-2 hover:bg-blue-200 font-mono flex">
-		<div class="px-2">{{ if eq .Cid.Prefix.Codec 0x70 }}/{{ else }}f{{ end }}</div>
+		<div class="px-2">
+			{{ if eq .Cid.Prefix.Codec 0x70 }}
+			<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z" />
+			</svg>
+			{{ else }}
+			<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+			    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
+			</svg>
+			{{ end }}
+		</div>
 		<div class="px-2 flex-1">{{ .Name }}</div>
 		<div class="px-2 bg-yellow-100 border border-yellow-200 rounded-lg">{{ .Cid }}</div>
 	</a>
