--- a/templates/render.tmpl
+++ b/templates/render.tmpl
@@ -74,7 +74,7 @@
 			{{ end }}
 		</div>
 		<div class="px-2 flex-1">{{ .Name }}</div>
-		<div class="px-2 bg-yellow-100 border border-yellow-200 rounded-lg">{{ .Cid }}</div>
+		<div class="px-2 bg-yellow-100 border border-yellow-200 rounded-lg text-xs h-4">{{ .Cid }}</div>
 	</a>
 	{{ end }}
 	{{ if .blob_str }}
