--- a/templates/render.tmpl
+++ b/templates/render.tmpl
@@ -121,6 +121,21 @@
 			</svg>
 		</div>
 		<div class="px-2 flex-1">{{ .Name }}</div>
+		<div class="px-2 hover:text-blue-500" title="rename" onclick="renameLink(event, '{{.Name}}')">
+			<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+			</svg>
+		</div>
+		<div class="px-2 hover:text-red-500" title="delete" onclick="deleteLink(event, '{{.Name}}')">
+			<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+			</svg>
+		</div>
+		<div class="px-2 hover:text-blue-500" title="www" onclick="browseLink(event, '{{.Name}}')">
+			<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+			</svg>
+		</div>
 		<div class="px-2 bg-yellow-100 border border-yellow-200 rounded-lg text-xs h-4">{{ .Cid }}</div>
 	</a>
 	{{ end }}
@@ -150,15 +165,6 @@
 			Add Dir:
 			<input type="file" id="file" name="directory" webkitdirectory>
 		</div> -->
-		<input type="submit" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">
-	</form>
-</div>
-
-<div class="bg-white shadow-lg rounded-lg max-w-md py-4 px-8 my-2 border">
-	<form action="?" method="post" >
-		<h2 class="text-lg">Create empty directory</h2>
-		name
-		<input type="text" id="dir" name="dir" class="w-full border-2 rounded">
 		<input type="submit" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">
 	</form>
 </div>
@@ -265,7 +271,8 @@ async function deleteLink(e, linkName) {
 
 async function browseLink(e, linkName) {
 	e.preventDefault();
-	console.log(e, linkName);
+	const url = "http://{{.root}}.{{.wwwHost}}/{{with .path}}{{.}}/{{end}}"+linkName;
+	window.open(url);
 }
 
 async function save() {
