--- a/templates/render.tmpl
+++ b/templates/render.tmpl
@@ -3,6 +3,8 @@
 <body class="p-10">
 {{ $current := .current }}
 {{ $root := .root }}
+{{ $wwwHost := .wwwHost }}
+{{ $path := .path }}
 
 <div class="divide-y-2 divide-blue-500 border-2 border-blue-500 rounded-lg">
 	<div class="p-2 flex">
@@ -109,17 +111,23 @@
 	{{/* files */}}
     {{ range .node.Links }}
 	{{ if ne .Cid.Prefix.Codec 0x70 }}
-	<a href="{{ $current }}{{ .Name }}" class="block p-2 hover:bg-blue-200 font-mono flex">
+	<div class="p-2 hover:bg-blue-200 font-mono flex">
 		<div class="px-2">
 			<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 			    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z" />
 			</svg>
 		</div>
-		<div class="px-2 flex-1">{{ .Name }}</div>
-		<div class="px-2 hover:text-blue-500" title="www" onclick="browseLink(event, '{{.Name}}')">
+		<div class="px-2 flex-1">
+			<a href="{{ $current }}{{ .Name }}" class="hover:underline hover:text-blue-500">
+				{{ .Name }}
+			</a>
+		</div>
+		<div class="px-2 hover:text-blue-500">
+			<a title="www" href="http://{{ $root }}.{{ $wwwHost }}/{{ with $path }}{{ . }}/{{ end }}{{.Name}}">
 			<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
 			</svg>
+			</a>
 		</div>
 		<div class="px-2 hover:text-blue-500" title="rename" onclick="renameLink(event, '{{.Name}}')">
 			<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -132,7 +140,7 @@
 			</svg>
 		</div>
 		<div class="px-2 bg-yellow-100 border border-yellow-200 rounded-lg text-xs h-4">{{ .Cid }}</div>
-	</a>
+	</div>
 	{{ end }}
 	{{ end }}
 
